Load individual post using index_followed.html

--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -222,6 +222,15 @@ script.
 			});
 		}
 
+		//- If a post is specified, load it before the left column.
+		{% if 'post' in col_right %}
+		var item_url = "{{ url_for('posts.view', community_url=project.url, post_shortcode=col_right['post'].properties.shortcode, _external=True, _scheme=config['PREFERRED_URL_SCHEME']) }}";
+		if (location.hash) {item_url += location.hash;};
+		item_open("{{col_right['post']['_id']}}", item_url);
+		// When loading the page for the first time, load post fullscreen
+		if (first_time) {enterFullscreen();}
+		{% endif %}
+
 		//- Load default posts.
 		fetchPosts();
 
