UI: Fix avatar hover breaking up the layout.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -126,7 +126,8 @@ nav
           will-change: transform
 
           &:hover
-            transform: scale(1.1)
+            img.avatar
+              background-color: var(--community-theme-color, $color-primary)
 
           &.theme-toggle
             +button-simple
