UI: Background color for post title.

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -745,6 +745,10 @@ body[data-context="post-edit"]
         pointer-events: none
         color: rgba($color-text-dark-hint, .6)
 
+  .item-content
+    background-color: $color-background-dark
+    border-top-left-radius: $border-radius * 2
+    border-top-right-radius: $border-radius * 2
 
 .item-link-container
   display: flex
