UI: Legacy Load More posts mode.
Until we make it nicer.

--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -241,6 +241,20 @@ script.
 			fetchPosts({'sorting': $(this).val()});
 		});
 
+		$('body').on('click', '.js-load-next-page', function(e){
+			e.preventDefault();
+			var nextPage = $(this).data('next-page');
+
+			//- Remove button and its container.
+			$(this).parent().remove();
+
+			fetchPosts({
+				'sorting': $sortingDropDown.value,
+				'page': $(this).data('next-page')
+			}, true);
+		});
+
+		{#
 		function fetchPostsNextPage(){
 			var nextPage = $('#col_main').data('next-page');
 
