--- a/src/templates/dillo/macros/_communities.pug
+++ b/src/templates/dillo/macros/_communities.pug
@@ -32,7 +32,7 @@ ul.list-unstyled
 ul.d-communities-sidebar
 	| {% set is_main_project_active = (project._id == main_project._id) %}
 	li(class="{% if is_main_project_active %}is-active{% endif%}")
-		a.py-1.d-block(
+		a.py-1.pr-2.d-block(
 			href="/c/",
 			title="{{ main_project.name }}")
 			.d-header-logo
@@ -40,7 +40,7 @@ ul.d-communities-sidebar
 	| {% for community in communities %}
 	| {% set is_active = (project._id == community._id) %}
 	li(class="{% if is_active %}is-active{% endif%}")
-		a.py-1.d-block(
+		a.py-1.pr-2.d-block(
 			href="{{ url_for('posts.index', community_url=community.url) }}",
 			title="{{ community.name }}")
 			| {% if community.picture_square %}
@@ -52,6 +52,7 @@ ul.d-communities-sidebar
 			| {% endif %}
 	| {% endfor %}
 
-	li.js-toggle-communities-flyout.mt-2
-		i.pi-angle-right.h2.p-1
+	//- Hide the toggle for all communities until we have more.
+		li.js-toggle-communities-flyout.mt-2
+			i.pi-angle-right.h2.p-1
 | {% endmacro %}
