UI: Show status_dev in post listing, if any.

--- a/src/templates/dillo/posts_list.pug
+++ b/src/templates/dillo/posts_list.pug
@@ -86,6 +86,11 @@
 						| {{ post.properties.content }}
 				| {% endif %}
 
+				| {% if post.properties.status_dev %}
+				li
+					| {{ post.properties.status_dev }}
+				| {% endif %}
+
 | {% endfor %}
 
 | {% if not is_last_page %}
