--- a/src/templates/dillo/posts_list.pug
+++ b/src/templates/dillo/posts_list.pug
@@ -66,11 +66,15 @@
 				| {{ post.name }}
 
 			ul.pb-2
+				| {% if rating > 0 %}
 				li
+					| {{ rating }}
 					| {% if rating > 5 %}
 					i(title="Hot Stuff").pi-fire.text-danger
+					| {% else %}
+					i.pi-heart-filled.text-secondary
 					| {% endif %}
-					| {{ rating }}
+				| {% endif %}
 
 				li
 					a(href="{{ post_url }}")
