Ui: Fix for layout when loading posts.

--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -80,7 +80,7 @@ li
 		| {% if 'post' in col_right %}
 		.item-view.loading
 			.item-view-header
-				.item-content
+				.item-content.d-flex.py-2
 					.item-rating-box
 						.item-rating.up
 							i.pi-angle-up
