UI: Minor layout and style tweaks.

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -1,5 +1,6 @@
 // Listing item.
 .item-title
+  color: $color-text
   line-height: 1.3em
   transition: color 100ms ease-in-out
 
@@ -677,6 +678,7 @@ body[data-context="post-edit"]
       padding: 0
 
   .comments-container
+    background-color: $color-background
     max-width: unset // Pillar sets a max-width in pixels.
 
     a, .sign-in a
