UI: Small cosmetic changes.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -31,6 +31,9 @@ body[data-context='post-fullscreen']
   .d-header-background
     opacity: .33
 
+  .comments-tree
+    max-width: unset
+
 
 .dialog-box
   align-self: flex-start
@@ -478,7 +481,7 @@ h4 .emoji
       background-image: linear-gradient(transparent 52px, $color-background 100%)
 
   // .d-header-logo
-  $header-logo-size: 40px
+  $header-logo-size: 35px
   &-logo
     +media-xs
       height: $header-logo-size / 1.8
